--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8080
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:storebd
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=rsilva
+spring.datasource.password=123456
