--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=rsilva
 spring.datasource.password=123456
 
-logging.level.org.springframework.jdbc.core=TRACE
+logging.level.org.springframework.jdbc.core=DEBUG
